added node attributes

--- a/cfbd_api.ipynb
+++ b/cfbd_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "a2204bf6",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "bcd9d5ff",
+   "execution_count": 4,
+   "id": "dc7d977e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,24 +30,85 @@
     "\n",
     "configuration = cfbd.Configuration(\n",
     "    access_token = API_KEY\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "43d5e8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching all team data for attributes for 2021...\n",
+      "Found 671 teams.\n",
+      "Fetching all team data for attributes for 2022...\n",
+      "Found 673 teams.\n",
+      "Fetching all team data for attributes for 2023...\n",
+      "Found 674 teams.\n",
+      "Fetching all team data for attributes for 2024...\n",
+      "Found 681 teams.\n",
+      "Fetching all team data for attributes for 2025...\n",
+      "Found 683 teams.\n",
+      "Node attribute maps created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# getting team data to cross ref\n",
+    "years = [2021, 2022, 2023, 2024, 2025]\n",
     "\n",
+    "# This is the only dictionary you need to create here.\n",
+    "node_attributes_by_year = {}\n",
+    "\n",
+    "for year in years:\n",
+    "    print(f\"Fetching all team data for attributes for {year}...\")\n",
+    "    teams_api = cfbd.TeamsApi(cfbd.ApiClient(configuration))\n",
+    "    all_teams = teams_api.get_teams(year=year)\n",
+    "    print(f\"Found {len(all_teams)} teams.\")\n",
+    "    \n",
+    "    current_year_attrs = {}\n",
+    "    for team in all_teams:\n",
+    "        current_year_attrs[team.school] = {\n",
+    "            # Use 'Unknown' as a default string if data is None\n",
+    "            'classification': str(team.classification) if team.classification else 'Unknown',\n",
+    "            'conference': str(team.conference) if team.conference else 'Unknown',\n",
+    "            # Use 0.0 as a default float if data is None\n",
+    "            'latitude': float(team.location.latitude) if team.location and team.location.latitude else 0.0,\n",
+    "            'longitude': float(team.location.longitude) if team.location and team.location.longitude else 0.0\n",
+    "        }\n",
+    "    node_attributes_by_year[year] = current_year_attrs\n",
+    "\n",
+    "print(\"Node attribute maps created successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bcd9d5ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# getting transfer portal data\n",
     "\n",
     "# Enter a context with an instance of the API client\n",
     "with cfbd.ApiClient(configuration) as api_client:\n",
     "    # Create an instance of the API class\n",
     "    api_instance = cfbd.PlayersApi(api_client)\n",
     "\n",
+    "api_response_2025 = api_instance.get_transfer_portal(year=2025)\n",
+    "api_response_2024 = api_instance.get_transfer_portal(year=2024)\n",
     "api_response_2023 = api_instance.get_transfer_portal(year=2023)\n",
     "api_response_2022 = api_instance.get_transfer_portal(year=2022)\n",
-    "api_response_2021 = api_instance.get_transfer_portal(year=2021)\n",
-    "api_response_2020 = api_instance.get_transfer_portal(year=2020)\n",
-    "api_response_2019 = api_instance.get_transfer_portal(year=2019)\n"
+    "api_response_2021 = api_instance.get_transfer_portal(year=2021)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "db80aba2",
    "metadata": {},
    "outputs": [
@@ -55,66 +116,137 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote 0 nodes and 0 edges to transfer_portal_2019.graphml]\n"
+      "Processing data for 2025...\n",
+      "\n",
+      "--- Verification ---\n",
+      "School: Alabama, Attributes: {'classification': 'fbs', 'conference': 'SEC', 'latitude': 33.2082752, 'longitude': -87.5503836}\n",
+      "School: North Dakota State, Attributes: {'classification': 'fcs', 'conference': 'MVFC', 'latitude': 46.9029938, 'longitude': -96.8003251}\n",
+      "School: Ohio State, Attributes: {'classification': 'fbs', 'conference': 'Big Ten', 'latitude': 40.0016447, 'longitude': -83.0197266}\n",
+      "Wrote 410 nodes and 3296 edges to transfer_portal_2025.graphml\n",
+      "Processing data for 2024...\n",
+      "\n",
+      "--- Verification ---\n",
+      "School: Alabama, Attributes: {'classification': 'fbs', 'conference': 'SEC', 'latitude': 33.2082752, 'longitude': -87.5503836}\n",
+      "School: North Dakota State, Attributes: {'classification': 'fcs', 'conference': 'MVFC', 'latitude': 46.9029938, 'longitude': -96.8003251}\n",
+      "School: Ohio State, Attributes: {'classification': 'fbs', 'conference': 'Big Ten', 'latitude': 40.0016447, 'longitude': -83.0197266}\n",
+      "Wrote 352 nodes and 2340 edges to transfer_portal_2024.graphml\n",
+      "Processing data for 2023...\n",
+      "\n",
+      "--- Verification ---\n",
+      "School: Alabama, Attributes: {'classification': 'fbs', 'conference': 'SEC', 'latitude': 33.2082752, 'longitude': -87.5503836}\n",
+      "School: North Dakota State, Attributes: {'classification': 'fcs', 'conference': 'MVFC', 'latitude': 46.9029938, 'longitude': -96.8003251}\n",
+      "School: Ohio State, Attributes: {'classification': 'fbs', 'conference': 'Big Ten', 'latitude': 40.0016447, 'longitude': -83.0197266}\n",
+      "Wrote 283 nodes and 1413 edges to transfer_portal_2023.graphml\n",
+      "Processing data for 2022...\n",
+      "\n",
+      "--- Verification ---\n",
+      "School: Alabama, Attributes: {'classification': 'fbs', 'conference': 'SEC', 'latitude': 33.2082752, 'longitude': -87.5503836}\n",
+      "School: North Dakota State, Attributes: {'classification': 'fcs', 'conference': 'MVFC', 'latitude': 46.9029938, 'longitude': -96.8003251}\n",
+      "School: Ohio State, Attributes: {'classification': 'fbs', 'conference': 'Big Ten', 'latitude': 40.0016447, 'longitude': -83.0197266}\n",
+      "Wrote 282 nodes and 1225 edges to transfer_portal_2022.graphml\n",
+      "Processing data for 2021...\n",
+      "\n",
+      "--- Verification ---\n",
+      "School: Alabama, Attributes: {'classification': 'fbs', 'conference': 'SEC', 'latitude': 33.2082752, 'longitude': -87.5503836}\n",
+      "School: North Dakota State, Attributes: {'classification': 'fcs', 'conference': 'MVFC', 'latitude': 46.9029938, 'longitude': -96.8003251}\n",
+      "School: Ohio State, Attributes: {'classification': 'fbs', 'conference': 'Big Ten', 'latitude': 40.0016447, 'longitude': -83.0197266}\n",
+      "Wrote 264 nodes and 958 edges to transfer_portal_2021.graphml\n"
      ]
     }
    ],
    "source": [
     "# convert to graphml\n",
     "\n",
-    "data = api_response_2019\n",
-    "filename = \"transfer_portal_2019.graphml\"\n",
+    "data_by_year = {\n",
+    "    2025: api_response_2025,\n",
+    "    2024: api_response_2024,\n",
+    "    2023: api_response_2023,\n",
+    "    2022: api_response_2022,\n",
+    "    2021: api_response_2021\n",
+    "}\n",
     "\n",
-    "G = nx.DiGraph()\n",
+    "node_attr_map = node_attributes_by_year\n",
+    "\n",
+    "default_attrs = {\n",
+    "    'classification': 'Unknown',\n",
+    "    'conference': 'Unknown',\n",
+    "    'latitude': 0.0,\n",
+    "    'longitude': 0.0\n",
+    "}\n",
     "\n",
     "# Add nodes and edges to the graph G based on data\n",
     "# Nodes: school names (origin and destination)\n",
     "# Edges: a directed edge origin -> destination per player; edge attributes aggregate players\n",
-    "for t in data:\n",
-    "    origin = t.origin.strip() if getattr(t, 'origin', None) else None\n",
-    "    dest = t.destination.strip() if getattr(t, 'destination', None) else None\n",
+    "for year, data in data_by_year.items():\n",
+    "    G = nx.DiGraph()\n",
+    "    print(f\"Processing data for {year}...\")\n",
+    "    for t in data:\n",
+    "        origin = t.origin.strip() if getattr(t, 'origin', None) else None\n",
+    "        dest = t.destination.strip() if getattr(t, 'destination', None) else None\n",
     "\n",
-    "    # add nodes if present\n",
-    "    if origin:\n",
-    "        G.add_node(origin)\n",
-    "    if dest:\n",
-    "        G.add_node(dest)\n",
+    "        # add nodes if present\n",
+    "        if origin:\n",
+    "            G.add_node(origin)\n",
+    "        if dest:\n",
+    "            G.add_node(dest)\n",
     "\n",
-    "    # only create edges when both origin and destination exist\n",
-    "    if origin and dest:\n",
-    "        player = f\"{getattr(t, 'first_name', '')} {getattr(t, 'last_name', '')}\".strip()\n",
-    "        pos = getattr(t, 'position', None)\n",
-    "        date = getattr(t, 'transfer_date', None)\n",
-    "        rating = getattr(t, 'rating', None)\n",
-    "        stars = getattr(t, 'stars', None)\n",
-    "        eligibility = getattr(t, 'eligibility', None)\n",
+    "        # only create edges when both origin and destination exist\n",
+    "        if origin and dest:\n",
+    "            player = f\"{getattr(t, 'first_name', '')} {getattr(t, 'last_name', '')}\".strip()\n",
+    "            pos = getattr(t, 'position', None)\n",
+    "            date = getattr(t, 'transfer_date', None)\n",
+    "            date_iso = date.isoformat() if date is not None else None\n",
+    "            rating = getattr(t, 'rating', None)\n",
+    "            stars = getattr(t, 'stars', None)\n",
+    "            eligibility = getattr(t, 'eligibility', None)\n",
     "\n",
-    "        if G.has_edge(origin, dest):\n",
-    "            edge = G[origin][dest]\n",
-    "            edge.setdefault('players', []).append(player)\n",
-    "            edge.setdefault('positions', []).append(pos)\n",
-    "            edge.setdefault('dates', []).append(date)\n",
-    "            edge.setdefault('ratings', []).append(rating)\n",
-    "            edge.setdefault('stars', []).append(stars)\n",
-    "            edge.setdefault('eligibility', []).append(str(eligibility))\n",
-    "            edge['weight'] = edge.get('weight', 1) + 1\n",
-    "        else:\n",
-    "            G.add_edge(origin, dest, players=[player], positions=[pos], date=[date], ratings=[rating], stars=[stars], eligibility=[str(eligibility)], weight=1)\n",
+    "            if G.has_edge(origin, dest):\n",
+    "                edge = G[origin][dest]\n",
+    "                edge.setdefault('players', []).append(player)\n",
+    "                edge.setdefault('positions', []).append(pos)\n",
+    "                edge.setdefault('dates', []).append(date_iso)\n",
+    "                edge.setdefault('ratings', []).append(rating)\n",
+    "                edge.setdefault('stars', []).append(stars)\n",
+    "                edge.setdefault('eligibility', []).append(str(eligibility))\n",
+    "                edge['weight'] = edge.get('weight', 1) + 1\n",
+    "            else:\n",
+    "                G.add_edge(origin, dest, players=[player], positions=[pos], dates=[date_iso], ratings=[rating], stars=[stars], eligibility=[str(eligibility)], weight=1)\n",
     "\n",
     "\n",
-    "# Serialize any list-valued (or None) edge attributes to strings for GraphML compatibility\n",
-    "for u, v, attrs in G.edges(data=True):\n",
-    "    for k in list(attrs.keys()):\n",
-    "        val = attrs[k]\n",
-    "        if isinstance(val, list):\n",
-    "            # join list elements into a single string; convert None -> empty string\n",
-    "            attrs[k] = ' | '.join(['' if x is None else str(x) for x in val])\n",
-    "        elif val is None:\n",
-    "            attrs[k] = ''\n",
+    "    # Serialize any list-valued (or None) edge attributes to strings for GraphML compatibility\n",
+    "    for u, v, attrs in G.edges(data=True):\n",
+    "        for k in list(attrs.keys()):\n",
+    "            val = attrs[k]\n",
+    "            if isinstance(val, list):\n",
+    "                # join list elements into a single string; convert None -> empty string\n",
+    "                attrs[k] = ' | '.join(['' if x is None else str(x) for x in val])\n",
+    "            elif val is None:\n",
+    "                attrs[k] = ''\n",
     "\n",
-    "# write graphml\n",
-    "nx.write_graphml(G, filename)\n",
-    "print(f\"Wrote {len(G.nodes())} nodes and {len(G.edges())} edges to {filename}]\")"
+    "    #Get the map of attributes for the specific year\n",
+    "    current_year_node_attrs = node_attr_map.get(year, {}) # Get the map, or an empty dict\n",
+    "\n",
+    "    # Create the final mapping, applying defaults to any node not in the map\n",
+    "    final_attrs_for_graph = {\n",
+    "        node: current_year_node_attrs.get(node, default_attrs) for node in G.nodes()\n",
+    "    }\n",
+    "\n",
+    "    # Set all attributes at once. \n",
+    "    # NetworkX unpacks the inner dictionaries automatically.\n",
+    "    nx.set_node_attributes(G, final_attrs_for_graph)\n",
+    "\n",
+    "    # --- 4. VERIFY AND SAVE ---\n",
+    "    print(\"\\n--- Verification ---\")\n",
+    "    # Check the attributes for a few schools\n",
+    "    for school in ['Alabama', 'North Dakota State', 'Ohio State']:\n",
+    "        if school in G:\n",
+    "            print(f\"School: {school}, Attributes: {G.nodes[school]}\")\n",
+    "\n",
+    "    filename = f\"transfer_portal_{year}.graphml\"\n",
+    "\n",
+    "    # write graphml\n",
+    "    nx.write_graphml(G, filename)\n",
+    "    print(f\"Wrote {len(G.nodes())} nodes and {len(G.edges())} edges to {filename}\")"
    ]
   }
  ],
