--- a/cfbd_api.ipynb
+++ b/cfbd_api.ipynb
@@ -69,16 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bcd9d5ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# getting transfer portal data\n",
     "\n",
-    "# Enter a context with an instance of the API client\n",
     "with cfbd.ApiClient(configuration) as api_client:\n",
-    "    # Create an instance of the API class\n",
     "    api_instance = cfbd.PlayersApi(api_client)\n",
     "\n",
     "api_response_2025 = api_instance.get_transfer_portal(year=2025)\n",
@@ -164,7 +162,7 @@
     "                attrs[k] = ''\n",
     "\n",
     "    #Get the map of attributes for the specific year\n",
-    "    current_year_node_attrs = node_attr_map.get(year, {}) # Get the map, or an empty dict\n",
+    "    current_year_node_attrs = node_attr_map.get(year, {})\n",
     "\n",
     "    # Create the final mapping, applying defaults to any node not in the map\n",
     "    final_attrs_for_graph = {\n",
@@ -175,13 +173,6 @@
     "    # NetworkX unpacks the inner dictionaries automatically.\n",
     "    nx.set_node_attributes(G, final_attrs_for_graph)\n",
     "\n",
-    "    # --- 4. VERIFY AND SAVE ---\n",
-    "    print(\"\\n--- Verification ---\")\n",
-    "    # Check the attributes for a few schools\n",
-    "    for school in ['Alabama', 'North Dakota State', 'Ohio State']:\n",
-    "        if school in G:\n",
-    "            print(f\"School: {school}, Attributes: {G.nodes[school]}\")\n",
-    "\n",
     "    filename = f\"transfer_portal_{year}.graphml\"\n",
     "\n",
     "    # write graphml\n",
@@ -191,82 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "71f35e10",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Fetching Recruiting Data for 27 seasons (2000 to 2026) ---\n",
-      "Fetching recruits for 2000...\n",
-      "Successfully fetched 119 recruits for 2000.\n",
-      "Fetching recruits for 2001...\n",
-      "Successfully fetched 129 recruits for 2001.\n",
-      "Fetching recruits for 2002...\n",
-      "Successfully fetched 1542 recruits for 2002.\n",
-      "Fetching recruits for 2003...\n",
-      "Successfully fetched 1839 recruits for 2003.\n",
-      "Fetching recruits for 2004...\n",
-      "Successfully fetched 1896 recruits for 2004.\n",
-      "Fetching recruits for 2005...\n",
-      "Successfully fetched 1936 recruits for 2005.\n",
-      "Fetching recruits for 2006...\n",
-      "Successfully fetched 2116 recruits for 2006.\n",
-      "Fetching recruits for 2007...\n",
-      "Successfully fetched 2165 recruits for 2007.\n",
-      "Fetching recruits for 2008...\n",
-      "Successfully fetched 2169 recruits for 2008.\n",
-      "Fetching recruits for 2009...\n",
-      "Successfully fetched 2214 recruits for 2009.\n",
-      "Fetching recruits for 2010...\n",
-      "Successfully fetched 2445 recruits for 2010.\n",
-      "Fetching recruits for 2011...\n",
-      "Successfully fetched 2682 recruits for 2011.\n",
-      "Fetching recruits for 2012...\n",
-      "Successfully fetched 3086 recruits for 2012.\n",
-      "Fetching recruits for 2013...\n",
-      "Successfully fetched 3430 recruits for 2013.\n",
-      "Fetching recruits for 2014...\n",
-      "Successfully fetched 3772 recruits for 2014.\n",
-      "Fetching recruits for 2015...\n",
-      "Successfully fetched 3516 recruits for 2015.\n",
-      "Fetching recruits for 2016...\n",
-      "Successfully fetched 3937 recruits for 2016.\n",
-      "Fetching recruits for 2017...\n",
-      "Successfully fetched 4222 recruits for 2017.\n",
-      "Fetching recruits for 2018...\n",
-      "Successfully fetched 3886 recruits for 2018.\n",
-      "Fetching recruits for 2019...\n",
-      "Successfully fetched 3992 recruits for 2019.\n",
-      "Fetching recruits for 2020...\n",
-      "Successfully fetched 3870 recruits for 2020.\n",
-      "Fetching recruits for 2021...\n",
-      "Successfully fetched 2666 recruits for 2021.\n",
-      "Fetching recruits for 2022...\n",
-      "Successfully fetched 2198 recruits for 2022.\n",
-      "Fetching recruits for 2023...\n",
-      "Successfully fetched 2297 recruits for 2023.\n",
-      "Fetching recruits for 2024...\n",
-      "Successfully fetched 2548 recruits for 2024.\n",
-      "Fetching recruits for 2025...\n",
-      "Successfully fetched 2507 recruits for 2025.\n",
-      "Fetching recruits for 2026...\n",
-      "Successfully fetched 2384 recruits for 2026.\n",
-      "\n",
-      "--- All recruiting data fetched successfully! ---\n",
-      "Data is stored in the 'recruits_by_year' dictionary.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
     "recruit_api = cfbd.RecruitingApi(cfbd.ApiClient(configuration))\n",
     "recruits_by_year = {}\n",
     "\n",
-    "start_year = 2000 # First year of available recruiting data\n",
+    "start_year = 2000 \n",
     "current_year = datetime.datetime.now().year\n",
     "end_year = current_year + 1 # Add 1 to get the *next* recruiting class\n",
     "\n",
@@ -275,7 +201,6 @@
     "\n",
     "print(f\"--- Fetching Recruiting Data for {len(years_to_fetch)} seasons ({start_year} to {end_year}) ---\")\n",
     "\n",
-    "# --- 3. Iterate and Fetch Data ---\n",
     "try:\n",
     "    for year in years_to_fetch:\n",
     "        print(f\"Fetching recruits for {year}...\")\n",
@@ -295,110 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "355dfc0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Building Bipartite Recruiting Graphs ---\n",
-      "\n",
-      "Processing recruiting data for 2000...\n",
-      "Wrote 151 nodes (40 schools, 111 hometowns) and 117 edges to recruiting_network_2000.graphml\n",
-      "\n",
-      "Processing recruiting data for 2001...\n",
-      "Wrote 169 nodes (50 schools, 119 hometowns) and 125 edges to recruiting_network_2001.graphml\n",
-      "\n",
-      "Processing recruiting data for 2002...\n",
-      "Wrote 812 nodes (108 schools, 704 hometowns) and 1039 edges to recruiting_network_2002.graphml\n",
-      "\n",
-      "Processing recruiting data for 2003...\n",
-      "Wrote 901 nodes (118 schools, 783 hometowns) and 1190 edges to recruiting_network_2003.graphml\n",
-      "\n",
-      "Processing recruiting data for 2004...\n",
-      "Wrote 923 nodes (119 schools, 804 hometowns) and 1242 edges to recruiting_network_2004.graphml\n",
-      "\n",
-      "Processing recruiting data for 2005...\n",
-      "Wrote 929 nodes (118 schools, 811 hometowns) and 1287 edges to recruiting_network_2005.graphml\n",
-      "\n",
-      "Processing recruiting data for 2006...\n",
-      "Wrote 1013 nodes (120 schools, 893 hometowns) and 1553 edges to recruiting_network_2006.graphml\n",
-      "\n",
-      "Processing recruiting data for 2007...\n",
-      "Wrote 1033 nodes (116 schools, 917 hometowns) and 1551 edges to recruiting_network_2007.graphml\n",
-      "\n",
-      "Processing recruiting data for 2008...\n",
-      "Wrote 1094 nodes (118 schools, 976 hometowns) and 1647 edges to recruiting_network_2008.graphml\n",
-      "\n",
-      "Processing recruiting data for 2009...\n",
-      "Wrote 1074 nodes (117 schools, 957 hometowns) and 1607 edges to recruiting_network_2009.graphml\n",
-      "\n",
-      "Processing recruiting data for 2010...\n",
-      "Wrote 1120 nodes (124 schools, 996 hometowns) and 1832 edges to recruiting_network_2010.graphml\n",
-      "\n",
-      "Processing recruiting data for 2011...\n",
-      "Wrote 1133 nodes (139 schools, 994 hometowns) and 1833 edges to recruiting_network_2011.graphml\n",
-      "\n",
-      "Processing recruiting data for 2012...\n",
-      "Wrote 1305 nodes (184 schools, 1121 hometowns) and 2148 edges to recruiting_network_2012.graphml\n",
-      "\n",
-      "Processing recruiting data for 2013...\n",
-      "Wrote 1278 nodes (207 schools, 1071 hometowns) and 2124 edges to recruiting_network_2013.graphml\n",
-      "\n",
-      "Processing recruiting data for 2014...\n",
-      "Wrote 1380 nodes (230 schools, 1150 hometowns) and 2204 edges to recruiting_network_2014.graphml\n",
-      "\n",
-      "Processing recruiting data for 2015...\n",
-      "Wrote 1379 nodes (228 schools, 1151 hometowns) and 2132 edges to recruiting_network_2015.graphml\n",
-      "\n",
-      "Processing recruiting data for 2016...\n",
-      "Wrote 1427 nodes (235 schools, 1192 hometowns) and 2440 edges to recruiting_network_2016.graphml\n",
-      "\n",
-      "Processing recruiting data for 2017...\n",
-      "Wrote 1454 nodes (235 schools, 1219 hometowns) and 2525 edges to recruiting_network_2017.graphml\n",
-      "\n",
-      "Processing recruiting data for 2018...\n",
-      "Wrote 1488 nodes (228 schools, 1260 hometowns) and 2770 edges to recruiting_network_2018.graphml\n",
-      "\n",
-      "Processing recruiting data for 2019...\n",
-      "Wrote 1286 nodes (226 schools, 1060 hometowns) and 2095 edges to recruiting_network_2019.graphml\n",
-      "\n",
-      "Processing recruiting data for 2020...\n",
-      "Wrote 1358 nodes (232 schools, 1126 hometowns) and 2222 edges to recruiting_network_2020.graphml\n",
-      "\n",
-      "Processing recruiting data for 2021...\n",
-      "Wrote 1136 nodes (200 schools, 936 hometowns) and 1679 edges to recruiting_network_2021.graphml\n",
-      "\n",
-      "Processing recruiting data for 2022...\n",
-      "Wrote 1005 nodes (183 schools, 822 hometowns) and 1479 edges to recruiting_network_2022.graphml\n",
-      "\n",
-      "Processing recruiting data for 2023...\n",
-      "Wrote 1043 nodes (176 schools, 867 hometowns) and 1647 edges to recruiting_network_2023.graphml\n",
-      "\n",
-      "Processing recruiting data for 2024...\n",
-      "Wrote 1136 nodes (189 schools, 947 hometowns) and 1797 edges to recruiting_network_2024.graphml\n",
-      "\n",
-      "Processing recruiting data for 2025...\n",
-      "Wrote 1133 nodes (187 schools, 946 hometowns) and 1838 edges to recruiting_network_2025.graphml\n",
-      "\n",
-      "Processing recruiting data for 2026...\n",
-      "Wrote 982 nodes (160 schools, 822 hometowns) and 1590 edges to recruiting_network_2026.graphml\n",
-      "\n",
-      "--- All recruiting graphs saved successfully! ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "\n",
-    "print(\"--- Building Bipartite Recruiting Graphs ---\")\n",
-    "\n",
-    "# Get the school attribute map from the previous cell\n",
     "school_attr_map = node_attributes_by_year \n",
     "\n",
-    "# Define default school attributes\n",
     "default_school_attrs = {\n",
     "    'classification': 'Unknown',\n",
     "    'conference': 'Unknown',\n",
@@ -406,66 +234,47 @@
     "    'longitude': 0.0\n",
     "}\n",
     "\n",
-    "# Loop over the raw data we just fetched\n",
     "for year, data in recruits_by_year.items():\n",
-    "    G = nx.Graph() # Bipartite graphs are typically undirected\n",
+    "    G = nx.Graph()\n",
     "    print(f\"\\nProcessing recruiting data for {year}...\")\n",
     "\n",
-    "    hometown_node_attrs = {} # Dict to store attributes for hometown nodes\n",
-    "    school_node_attrs = {}   # Dict to store attributes for school nodes\n",
+    "    hometown_node_attrs = {}\n",
+    "    school_node_attrs = {}\n",
     "\n",
     "    for t in data:\n",
-    "        # --- 1. Get School Node (Set 0) ---\n",
     "        school = getattr(t, 'committed_to', None)\n",
     "        \n",
-    "        # --- 2. Get Hometown Node (Set 1) ---\n",
-    "        \n",
-    "        # Get city and state from the TOP-LEVEL recruit object\n",
     "        city = getattr(t, 'city', None)\n",
     "        state = getattr(t, 'state_province', None)\n",
     "        \n",
-    "        # Get the hometown_info object ONLY for coordinates\n",
     "        hometown_info = getattr(t, 'hometown_info', None)\n",
     "        \n",
     "        hometown_key = None\n",
-    "        # We need city and state to create a unique hometown key\n",
     "        if city and state:\n",
     "            hometown_key = f\"{city}, {state}\"\n",
     "        \n",
-    "        # --- 3. We need BOTH nodes to create an edge ---\n",
     "        if not school or not hometown_key:\n",
-    "            continue # Skip this recruit if they aren't committed or have no hometown\n",
+    "            continue\n",
     "\n",
-    "        # --- 4. Add Nodes and Gather Attributes ---\n",
-    "        \n",
-    "        # Add School Node (if it's not already in the graph)\n",
     "        if school not in G:\n",
     "            G.add_node(school, bipartite=0, type='School')\n",
-    "            # Get its attributes from the map we built earlier\n",
     "            school_node_attrs[school] = school_attr_map.get(year, {}).get(school, default_school_attrs)\n",
     "        \n",
-    "        # Add Hometown Node (if it's not already in the graph)\n",
     "        if hometown_key not in G:\n",
     "            G.add_node(hometown_key, bipartite=1, type='Hometown')\n",
-    "            # Store its attributes\n",
     "            hometown_node_attrs[hometown_key] = {\n",
-    "                # Get lat/long from the hometown_info object\n",
     "                'latitude': float(hometown_info.latitude) if hometown_info and hometown_info.latitude else 0.0,\n",
     "                'longitude': float(hometown_info.longitude) if hometown_info and hometown_info.longitude else 0.0,\n",
-    "                # Get city/state from the top-level variables\n",
     "                'city': city,\n",
     "                'state': state\n",
     "            }\n",
     "\n",
-    "        # --- 5. Get Edge Attributes ---\n",
-    "        # These are all the attributes you requested\n",
     "        player = getattr(t, 'name', 'Unknown')\n",
     "        pos = getattr(t, 'position', 'N/A')\n",
-    "        rating = getattr(t, 'rating', 0.0) # Use 0.0 for None\n",
+    "        rating = getattr(t, 'rating', 0.0)\n",
     "        recruit_type = getattr(t, 'recruit_type', 'N/A')\n",
-    "        stars = getattr(t, 'stars', 0) # Use 0 for None\n",
+    "        stars = getattr(t, 'stars', 0)\n",
     "\n",
-    "        # --- 6. Add/Update the Edge ---\n",
     "        if G.has_edge(hometown_key, school):\n",
     "            edge = G[hometown_key][school]\n",
     "            edge['players'].append(player)\n",
@@ -483,11 +292,9 @@
     "                       recruit_types=[recruit_type], \n",
     "                       weight=1)\n",
     "    \n",
-    "    # --- 7. Apply All Node Attributes ---\n",
     "    nx.set_node_attributes(G, school_node_attrs)\n",
     "    nx.set_node_attributes(G, hometown_node_attrs)\n",
     "    \n",
-    "    # --- 8. Serialize Edge Lists for GraphML ---\n",
     "    for u, v, attrs in G.edges(data=True):\n",
     "        for k in list(attrs.keys()):\n",
     "            val = attrs[k]\n",
@@ -496,7 +303,6 @@
     "            elif val is None:\n",
     "                attrs[k] = ''\n",
     "\n",
-    "    # --- 9. Save the GraphML File ---\n",
     "    filename = f\"recruiting_network_{year}.graphml\"\n",
     "    nx.write_graphml(G, filename)\n",
     "    print(f\"Wrote {len(G.nodes())} nodes ({len(school_node_attrs)} schools, {len(hometown_node_attrs)} hometowns) and {len(G.edges())} edges to {filename}\")\n",
