--- a/cfbd_api.ipynb
+++ b/cfbd_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a2204bf6",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,13 @@
     "from pprint import pprint\n",
     "import sys, subprocess\n",
     "import networkx as nx\n",
+    "import datetime\n",
     "from config import API_KEY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dc7d977e",
    "metadata": {},
    "outputs": [],
@@ -187,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
+    "# getting recruit data\n",
     "\n",
     "recruit_api = cfbd.RecruitingApi(cfbd.ApiClient(configuration))\n",
     "recruits_by_year = {}\n",
@@ -196,21 +197,12 @@
     "current_year = datetime.datetime.now().year\n",
     "end_year = current_year + 1 # Add 1 to get the *next* recruiting class\n",
     "\n",
-    "# Create the full list of years to fetch\n",
     "years_to_fetch = list(range(start_year, end_year + 1)) # +1 because range() is exclusive\n",
-    "\n",
-    "print(f\"--- Fetching Recruiting Data for {len(years_to_fetch)} seasons ({start_year} to {end_year}) ---\")\n",
     "\n",
     "try:\n",
     "    for year in years_to_fetch:\n",
-    "        print(f\"Fetching recruits for {year}...\")\n",
     "        api_response = recruit_api.get_recruits(year=year)\n",
-    "        \n",
     "        recruits_by_year[year] = api_response\n",
-    "        print(f\"Successfully fetched {len(api_response)} recruits for {year}.\")\n",
-    "        \n",
-    "    print(\"\\n--- All recruiting data fetched successfully! ---\")\n",
-    "    print(\"Data is stored in the 'recruits_by_year' dictionary.\")\n",
     "\n",
     "except ApiException as e:\n",
     "    print(f\"Error calling RecruitsApi->get_recruits: {e}\")\n",
@@ -225,6 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# adding node attributes\n",
+    "\n",
     "school_attr_map = node_attributes_by_year \n",
     "\n",
     "default_school_attrs = {\n",
@@ -308,6 +302,43 @@
     "    print(f\"Wrote {len(G.nodes())} nodes ({len(school_node_attrs)} schools, {len(hometown_node_attrs)} hometowns) and {len(G.edges())} edges to {filename}\")\n",
     "\n",
     "print(\"\\n--- All recruiting graphs saved successfully! ---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96d26274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# getting team roster + performance data\n",
+    "\n",
+    "# for every year available at or above 2000\n",
+    "for year in \n",
+    "\n",
+    "# /roster, /talent, /ratings/fpi, /ratings/srs\n",
+    "with cfbd.ApiClient(configuration) as api_client:\n",
+    "    api_teams = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f86be15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add IDs to datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "616c7d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# some way of incorporating player performance"
    ]
   }
  ],
